<?xml version="1.0"?>
<package format="2">
    <name>insprobe_msgs</name>
    <version>1.0.0</version>
    <description>The insprobe message package</description>

    <license>BSD</license>

    <maintainer email="thl@whu.edu.cn">hailiang</maintainer>
    <author email="thl@whu.edu.cn">hailiang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
